# RouteRecorder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
arduino_code/gps_logger/: CMakeLists.txt  DataLogger.cpp  DataLogger.hpp  Helper.cpp  Helper.hpp  gps_logger.ino
kml_generator/: gps_route_map.html  kml_converter.py
kml_generator/csv_data/: GPSDATA.CSV
tests/: helper_test.cpp  sample_test.cpp
tests/mocks/: Arduino.h  MockArduino.cpp  Wire.h
